# machine-learning-sample-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  application.py  dvc.yaml  pyproject.toml
app/: __init__.py  classification.py  featurization.py  utils.py
app/api/: __init__.py  core.py  utils.py
app/api/dtos/: __init__.py  responses.py
app/api/resources/: __init__.py  classification.py  health.py
app/model/: .gitignore
classification/model/: logistic-regression.onnx
package/: api.py  classification.py  dtos.py  featurization.py  logging.py  preprocessing.py  utils.py
package/api/: app.py  utils.py
package/api/dtos/: __init__.py  requests.py
package/model/: logistic-regression.onnx
tests/: test_classification.py  test_featurization.py
tools/: acceleration.ipynb  profiling.py  utils.py
training/: dataset.ndjson  train_model.py
