[project]
name = "app"
version = "0.1.0"
description = "Example data science project"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "falcon>=4.0.1",
    "gunicorn>=23.0.0",
    "marshmallow>=3.23.0",
    "numpy>=1.26.4",
    "onnxruntime>=1.19.2",
    "optimum",
]

[tool.uv]
dev-dependencies = [
    "datasets>=3.0.2",
    "dvc>=3.56.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "scikit-learn>=1.5.2",
    "skl2onnx>=1.17.0",
    "snakeviz>=2.2.0",
    "stopwordsiso>=0.6.1",
    "transformers>=4.42.0",
]

[tool.uv.sources]
optimum = { git = "https://github.com/VTrngNghia/optimum" }

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "YTT", # flake8-2020
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "I",   # isort
    "NPY", # NumPy-specific rules
    "N",   # pep8-naming
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "D",   # pydocstyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "S101", # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
